@@ -7,5 +7,7 @@ EXTRA_DIST = \
 	vc-libpqxx.mak.template \
 	vc-libpqxx.mak \
 	vc-test.mak.template \
-	vc-test.mak
+	vc-test.mak \
+	vc-test-unit.mak.template \
+	vc-test-unit.mak
 
