@@ -48,8 +48,7 @@ PQXXLIBTYPESUFFIX=_static
 
 
 CXX_FLAGS_BASE=/nologo /W3 /EHsc /FD /GR /c \
-    /I "include" /I $(PGSQLSRC)/include /I $(PGSQLSRC)/interfaces/libpq \
-    /D "WIN32" /D "_CONSOLE" /D "_MBCS" /D "_WINDOWS" $(PQXX_SHARED)
+    /I "include" /D "WIN32" /D "_CONSOLE" /D "_MBCS" /D "_WINDOWS" $(PQXX_SHARED)
 
 LINK_FLAGS_BASE=kernel32.lib ws2_32.lib advapi32.lib /nologo /machine:I386 /libpath:"$(LIBDIR)"
 
@@ -58,19 +57,20 @@ LINK_FLAGS_BASE=kernel32.lib ws2_32.lib advapi32.lib /nologo /machine:I386 /libp
 BUILDMODE=Debug
 DEBUGSUFFIX=D
 CXX_FLAGS=$(CXX_FLAGS_BASE) /MDd /Gm /ZI /Od /D "_DEBUG" /RTC1
-LINK_FLAGS=$(LINK_FLAGS_BASE) /debug
+LINK_FLAGS=$(LINK_FLAGS_BASE) $(LIBPQDLIB) /debug
+LIBPQ=$(LIBPQDDLL)
 !ELSE
 BUILDMODE=Release
 DEBUGSUFFIX=
 CXX_FLAGS=$(CXX_FLAGS_BASE) /MD /D "NDEBUG"
-LINK_FLAGS=$(LINK_FLAGS_BASE)
+LINK_FLAGS=$(LINK_FLAGS_BASE) $(LIBPQLIB)
+LIBPQ=$(LIBPQDLL)
 !ENDIF
 
 
 INTDIR=Test$(PQXXLIBTYPE)$(BUILDMODE)
 PQXXLIB=libpqxx$(PQXXLIBTYPESUFFIX)$(DEBUGSUFFIX).lib
 PQXX=libpqxx$(DEBUGSUFFIX).dll
-LIBPQ=libpq$(DEBUGSUFFIX).dll
 
 !IF "$(DLL)" == "1"
 DLLS=$(INTDIR)\$(LIBPQ) $(INTDIR)\$(PQXX)
